--- a/VB/WindowsApplication1/app.config
+++ b/VB/WindowsApplication1/app.config
@@ -1,10 +1,8 @@
-<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="WindowsApplication1.Properties.Settings.nwindConnectionString"
-            connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=&quot;c:\Users\Public\Documents\DXperience 12.1 Demos\Data\nwind.mdb&quot;"
-            providerName="System.Data.OleDb" />
+        <add name="WindowsApplication1.Properties.Settings.nwindConnectionString" connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=&quot;..\nwind.mdb&quot;" providerName="System.Data.OleDb"/>
     </connectionStrings>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/></startup></configuration>
