--- a/VB/WindowsApplication1/app.config
+++ b/VB/WindowsApplication1/app.config
@@ -3,6 +3,6 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="WindowsApplication1.Properties.Settings.nwindConnectionString" connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=&quot;..\nwind.mdb&quot;" providerName="System.Data.OleDb"/>
+        <add name="WindowsApplication1.Properties.Settings.nwindConnectionString" connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=&quot;..\..\nwind.mdb&quot;" providerName="System.Data.OleDb"/>
     </connectionStrings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/></startup></configuration>
